--- a/frontend/style.css
+++ b/frontend/style.css
@@ -69,6 +69,7 @@ h1 {
 }
 
 .choose-year input {
+  border-radius: 10px;
   width: 100px;
   font-size: 2rem;
   background: rgba(169, 169, 169, 0.493);
@@ -87,7 +88,7 @@ h2 {
   justify-content: space-between;
   margin: 30px auto 10px 50px;
   padding: 0 0 0 20px;
-  border-radius: 10px;
+  border-radius: 20px;
   font-size: 2rem;
   background: rgba(169, 169, 169, 0.856);
 }
@@ -96,10 +97,11 @@ h2 {
   background: rgba(169, 169, 169, 0.856);
   width: 200px;
   font-size: 1.5rem;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .save:hover {
+  cursor: pointer;
   background: rgb(88, 85, 85);
 }
 
@@ -159,11 +161,28 @@ h2 {
 h3 {
   background-color: rgb(88, 85, 85);
   text-align: center;
-  height: 30px;
-  font-size: 2rem;
+  height: 50px;
+  padding: 10px;
   border-radius: 10px;
-  padding: 20px;
+  font-size: 2rem;
   margin-bottom: 20px;
+}
+
+h4 {
+  background-color: rgba(169, 169, 169, 1);
+  text-align: center;
+  height: 50px;
+  width: 500px;
+
+  font-size: 1.4rem;
+  border-radius: 20px;
+
+  margin: 10px;
+}
+
+h4:hover {
+  cursor: pointer;
+  background: rgb(88, 85, 85);
 }
 span {
   font-size: 1rem;
@@ -209,7 +228,6 @@ span {
 .nbrPersonnes {
   width: 120px;
   height: 30px;
-  margin-bottom: 20px;
 }
 
 .nbrPersonnes * {
@@ -218,7 +236,86 @@ span {
   margin-bottom: 20px;
 }
 
+span,
+label {
+  font-size: 1.5rem;
+}
+
+label {
+  text-align: right;
+  width: 150px;
+}
+
+#arrive,
+#depart {
+  width: 100px;
+  height: 30px;
+  margin: 5px;
+}
+
+input {
+  background: rgba(238, 235, 235, 0.493);
+  height: 30px;
+
+  border-radius: 5px;
+}
+
 .contact {
   display: flex;
   flex-direction: column;
+}
+.telmail {
+  margin-top: 20px;
+
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+#tel,
+#email,
+#immat,
+#siblu {
+  width: 160px;
+}
+
+.buttonsPop {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#enr,
+#quit,
+#supp {
+  border-radius: 20px;
+  background: rgba(169, 169, 169, 0.856);
+  font-size: 1.5rem;
+  width: 150px;
+  height: 50px;
+  margin: 5px;
+}
+
+#enr:hover,
+#quit:hover,
+#supp:hover {
+  cursor: pointer;
+  background: rgb(88, 85, 85);
+}
+
+.addClient {
+  border-radius: 20px;
+  background: rgba(169, 169, 169, 1);
+  font-size: 1.5rem;
+  width: 250px;
+  height: 30px;
+  margin: 5px;
+}
+
+.addClient:hover {
+  cursor: pointer;
+  background: rgb(88, 85, 85);
 }
