--- a/frontend/style.css
+++ b/frontend/style.css
@@ -122,8 +122,6 @@ h2 {
   background: rgba(169, 169, 169, 0.87);
   border-radius: 5px;
   text-align: center;
-
-  padding: 5px;
 }
 
 .grid {
@@ -169,7 +167,6 @@ h3 {
 }
 
 h4 {
-  background-color: rgba(169, 169, 169, 1);
   text-align: center;
   height: 50px;
   width: 500px;
@@ -290,7 +287,8 @@ input {
 
 #enr,
 #quit,
-#supp {
+#supp,
+#msg {
   border-radius: 20px;
   background: rgba(169, 169, 169, 0.856);
   font-size: 1.5rem;
@@ -301,7 +299,8 @@ input {
 
 #enr:hover,
 #quit:hover,
-#supp:hover {
+#supp:hover,
+#msg:hover {
   cursor: pointer;
   background: rgb(88, 85, 85);
 }
@@ -318,4 +317,33 @@ input {
 .addClient:hover {
   cursor: pointer;
   background: rgb(88, 85, 85);
+}
+
+.entete {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+#color {
+  height: 40px;
+  margin-left: 150px;
+  align-items: center;
+}
+
+.mars {
+  display: flex;
+  flex-direction: column;
+}
+
+.date {
+  display: flex;
+  flex-direction: row;
+}
+
+.demi {
+  flex: 1;
+  width: 50%;
+  height: 35px;
+  /* background-color: rgba(218, 86, 147, 0.856) !important; */
 }
