--- a/frontend/style.css
+++ b/frontend/style.css
@@ -62,25 +62,16 @@ h1 {
   font-size: 4rem;
   text-align: center;
 }
-
-.choose-year label {
-  font-size: 2rem;
-  text-align: center;
+#yearLabel {
+  margin-left: 200px;
 }
 
-.choose-year input {
+#year {
   border-radius: 10px;
   width: 100px;
   font-size: 2rem;
   background: rgba(169, 169, 169, 0.493);
   text-align: center;
-}
-
-.choose-year {
-  display: flex;
-  justify-content: center;
-  margin: 20px;
-  height: 30px;
 }
 
 h2 {
@@ -179,7 +170,7 @@ h4 {
 
 h4:hover {
   cursor: pointer;
-  background: rgb(88, 85, 85);
+  scale: 1.1;
 }
 span {
   font-size: 1rem;
