--- a/frontend/messageStyle.css
+++ b/frontend/messageStyle.css
@@ -1,3 +1,19 @@
 .popupMessage {
-  display: block;
+  border-radius: 20px;
+  border: solid 3px black;
+  box-shadow: black 0px 0px 14px 7px;
+  display: none;
+  position: fixed;
+  top: 80px;
+  left: 20px;
+  background-color: rgba(169, 169, 169, 1);
+  width: 700px;
+  height: 500px;
+}
+#zoneMessage {
+  resize: none;
+  background: rgba(238, 235, 235, 0.493);
+  height: 100px;
+  width: 500px;
+  border-radius: 5px;
 }
